--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,9 +13,17 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Public Sans', sans-serif;
+    font-size: $font-med;
+    font-weight: 300;
+    color: $lightGrayishBlue;
     line-height: 1.3;
 }
 
+
+a, a:visited, a:hover {
+    text-decoration: none;
+    
+}
 
 //Flexbox
 
@@ -37,3 +45,39 @@ body {
     }
     
 }
+
+// Buttons
+
+button, .button {
+
+    padding: 0.875rem 2.1875rem;
+    background: linear-gradient(to right, $limeGreen, $brightCyan);
+    border: 0;
+    border-radius: 50px;
+    cursor: pointer;
+    color: $white;
+    font-weight: 400;
+}
+
+//Visibility
+
+.hide-for-mobile {
+    
+
+    @include breakpoint-down(medium) {
+        display: none;
+    }
+}
+
+.hide-for-desktop {
+
+    @include breakpoint-up(large){
+        display: none;
+    
+    }
+
+
+}
+
+
+   
