--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,3 +5,8 @@ $grayishBlue: hsl(233, 8%, 62%);
 $lightGrayishBlue: hsl(220, 16%, 96%);
 $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
+$dark: hsl(235, 22%, 10%);
+
+//font sizes
+$font-sm: 0.875rem; //14px
+$font-med: 1.125rem; //18px
