--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -1,6 +1,6 @@
 .header {
     nav {
-      padding: 24px;
+      padding: 1.0625rem 24px;
        
     }
 
@@ -9,7 +9,8 @@
 
 
         img {
-
+           width: 8.8125 rem;
+           height: 1.375;
         }
 
     }
@@ -20,15 +21,91 @@
             display: block;
             width: 26px;
             height: 2px;
-            background-color: $darkBlue;
-   
+            background-color: hsl(233, 26%, 24%);
+            transition: all 300ms ease-in-out;
+            transform-origin:  center ;
+
              &:not(:last-child){
-               margin-bottom: 3px;
+               margin-bottom: 5px;
    
              }
    
            }
+
+        &.open {
+
+          > span:first-child {
+              
+              transform: rotate(45deg) translate(8px, 8px);
+              transition: 0.5s;
+          }
+
+          > span:nth-child(2) {
+            transform: translate(230px);
+            transition: .1s ease-in;
+            opacity: 0;
+
+          > span:last-child {
+            
+            transform: rotate(-45deg) translate(8px, -7px);
+            transition: .5s;
+            
+          }
+
+        }
        
     }
 
+    &_links {
+
+      
+     
+      a{
+        position: relative;
+        font-size: 0.875rem;
+        color:hsl(233, 8%, 62%);
+        transition: color 200ms ease-in-out;
+       
+
+        &:not(:last-child){
+          margin-right: 32px;
+        }
+
+        &::before {
+          content: "";
+          display: block;
+          position: absolute;
+          height: 5px;
+          background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+          opacity: 0;
+          left: 0;
+          right: 0;
+          bottom: -30px;
+          transition: opacity 300ms ease-in-out;
+          
+        }
+        &:hover {
+          color: hsl(235, 22%, 10%);
+
+
+          &::before {
+            opacity: 1;
+            
+          }
+        }
+
+      }
+    }
+
+    &_cta {
+      font-size: 0.875rem;
+      color: hsl(0, 0%, 100%);
+      transition: opacity 300ms ease-in-out ;
+
+      &:hover {
+        opacity: 0.90;
+      }
+      
+    }
+  }
 }
